--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                     <ion-icon name="mail-outline"></ion-icon>
                 </div>
                 <h3>Email</h3>
-                <p><a href="ramajyotsna05@gmail.com">contact</a></p>
+                <p><a href="ramajyotsna05@gmail.com">ramajyotsna05@gmail.com</a></p>
             </div>
             
             <div class="contact-card">
@@ -99,26 +99,7 @@
                 <h3>LinkedIn</h3>
                 <p><a href="https://www.linkedin.com" target="_blank">linkedin.com/in/myprofile</a></p>
             </div>
-        </div>
         
-        <div class="contact-form-container">
-            <h3>Send Me a Message</h3>
-            <form class="contact-form">
-                <div class="form-group">
-                    <input type="text" id="name" name="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" id="email" name="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <input type="text" id="subject" name="subject" placeholder="Subject">
-                </div>
-                <div class="form-group">
-                    <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
-        </div>
     </section>
 </body>
 </html>
